# tripleo-common

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .pylintrc  .stestr.conf  CONTRIBUTING.rst  HACKING.rst  README.rst  bindep.txt  lower-constraints.txt  openstack-common.conf  requirements.txt  setup.cfg  setup.py  sudoers  test-requirements.txt  tox.ini
ansible_plugins/callback/: json_error.py
container-images/: ceph.j2  container_image_prepare_defaults.yaml  overcloud_containers.yaml  overcloud_containers.yaml.j2  tripleo_containers.yaml  tripleo_containers.yaml.j2  tripleo_kolla_config_overrides.conf  tripleo_kolla_template_overrides.j2
contrib/: overcloud_containers.yaml  tripleo_kolla_template_overrides.j2
doc/: requirements.txt
doc/source/: conf.py  images.rst  index.rst  installation.rst  tripleo-mistral.rst  uploads.rst  usage.rst
healthcheck/: README.md  aodh-evaluator  aodh-listener  aodh-notifier  ceilometer-agent-compute  ceilometer-agent-ipmi  ceilometer-agent-notification  cinder-backup  cinder-scheduler  cinder-volume  common.sh  cron  frr  glance-api  gnocchi-statsd  heat-api  heat-api-cfn  heat-engine  horizon  http-healthcheck.py  ironic-api  ironic-conductor  ironic-inspector  ironic-pxe  keystone-admin  keystone-public  manila-api  manila-scheduler  manila-share  mariadb  memcached  mistral-engine  neutron-api  neutron-dhcp  neutron-l3  neutron-metadata  neutron-ovs-agent  nova-api  nova-conductor  nova-consoleauth  (+23 more)
heat_docker_agent/: Dockerfile  configure_container.sh  hook-docker-cmd.py  run-os-net-config
image-yaml/: overcloud-hardened-images-centos7.yaml  overcloud-hardened-images-centos8.yaml  overcloud-hardened-images-python3-rt-kernel.yaml  overcloud-hardened-images-python3.yaml  overcloud-hardened-images-rhel7.yaml  overcloud-hardened-images-rhel8.yaml  overcloud-hardened-images-uefi-centos7.yaml  overcloud-hardened-images-uefi-centos8.yaml  overcloud-hardened-images-uefi-centos9.yaml  overcloud-hardened-images-uefi-python3-rt-kernel.yaml  overcloud-hardened-images-uefi-python3.yaml  overcloud-hardened-images-uefi-rhel7.yaml  overcloud-hardened-images-uefi-rhel8.yaml  overcloud-hardened-images-uefi-rhel9.yaml  overcloud-hardened-images-uefi.yaml  overcloud-hardened-images.yaml  overcloud-images-centos7.yaml  overcloud-images-centos8.yaml  overcloud-images-centos9.yaml  overcloud-images-ceph-centos8.yaml  overcloud-images-ceph-centos9.yaml  overcloud-images-ceph-rhel8.yaml  overcloud-images-ceph-rhel9.yaml  overcloud-images-ceph.yaml  overcloud-images-fedora.yaml  overcloud-images-python3.yaml  overcloud-images-rhel7.yaml  overcloud-images-rhel8.yaml  overcloud-images-rhel9.yaml  overcloud-images.yaml  overcloud-odl-rhel7.yaml  overcloud-realtime-compute-centos7.yaml  overcloud-realtime-compute-python3.yaml  overcloud-realtime-compute-rhel7.yaml  overcloud-realtime-compute.yaml
playbooks/: nova_cellv2_host_discover.yaml  octavia-files.yaml  rotate-keys.yaml  swift_ring_rebalance.yaml
releasenotes/notes/: 5.8.0-d1ca2298ba598431.yaml  Add-rotate-fernet-keys-action-a1080bf5fb18413f.yaml  DeployArtifactURLs-Simplified-e3993493022653ab.yaml  Public-TLS-by-default-ea0bc712f475472f.yaml  accept-glance-image-id-6e8bf439d93b3fb5.yaml  add-check-mode-support-for-hiera-f15fed971d4397f8.yaml  add-generation-of-barbican-simple-crypto-kek-507fd2f21cdcf21b.yaml  add-overcloud-ceph-image-build-yamls-8ad8fe8b013a314e.yaml  add-real-time-kernel-images-cc790c6d7b6229da.yaml  add-rootstackname-on-update-258dbf091fea497e.yaml  adds-ansible-actions-4da45efa8a98cade.yaml  adds-create-container-workflow-77ee4557779563c0.yaml  adds-delete-plan-workflow-d625682fdddd3f48.yaml  adds-generate-fencing-parameters-e2ea121247779db3.yaml  adds-list-plan-workflow-c0c6f91c9460a09a.yaml  allow-upload-big-files-f67ff35fcd166612.yaml  ansible-action-log-20904253f962557f.yaml  append-ironic-staging-drivers-d278905bb1ec0683.yaml  available-roles-workflow-fe81806915124cb6.yaml  bindep-tox-606dbe4ddf68f7a6.yaml  blacklisted_ips_support-f362e008ae1af210.yaml  blacklisted_serverid_config-e079e64e8a04cdb4.yaml  break-up-messages-0c438e658ce32892.yaml  buildah_build-727eb0f35f819731.yaml  caps-fix-f6f8817a48fa5c25.yaml  capture-environment-status-and-logs-3462d6ebbc9ecf2e.yaml  change-odl-healthcheck-uri-84d6dea51b110772.yaml  check-boot-action-548e38d17cf1ad96.yaml  check-flavors-action-59b7f2dd5103ad9d.yaml  check-node-counts-bb80a5cdd8d10475.yaml  check_for_default_tag-09fe34d2ac434890.yaml  check_ovs_upgrade-99cecd6b7bfdcf83.yaml  cinder-and-glance-api-version-bca6acd809d4151c.yaml  (+151 more)
scripts/: README-tripleo.sh  bindep-install  bootstrap_host_only_eval  bootstrap_host_only_exec  container-update.py  containerfile-converter.py  create_freeipa_enroll_envfile.py  pull-puppet-modules  run-validation  tripleo-build-images  tripleo-config-download  tripleo-container-image-prepare  tripleo-deploy-openshift  tripleo-mount-image  tripleo-overcloud-cert  tripleo-unmount-image  tripleo.sh  upgrade-non-controller.sh  upload-artifacts  upload-puppet-modules  upload-swift-artifacts
templates/: tenantvm_floatingip.yaml
tools/: check_duplicate_jinja_blocks.sh  releasenotes_tox.sh
tripleo_common/: __init__.py  _stack_update.py  arch.py  constants.py  exception.py  i18n.py  inventories.py  inventory.py  libutils.py  scale.py  stack_update.py  update.py  upgrade.py
undercloud_heat_plugins/: config.py  immutable_resources.py  server_update_allowed.py
workbooks/: access.yaml  baremetal.yaml  baremetal_deploy.yaml  ceph-ansible.yaml  container_images.yaml  deployment.yaml  derive_params.yaml  derive_params_formulas.yaml  fernet-key-rotate.yaml  heat_environments.yaml  messaging.yaml  networks.yaml  nova_host_discovery.yaml  octavia_post.yaml  package_update.yaml  parameters.yaml  plan_management.yaml  rename_ceph_ansible_fetch_directory.yaml  scale.yaml  skydive-ansible.yaml  stack.yaml  support.yaml  swift.yaml  swift_backup.yaml  swift_ring_rebalance.yaml  swift_rings_backup.yaml  undercloud_backup.yaml  validations.yaml
zuul.d/: cross-jobs.yaml  layout.yaml
(+417 files in other folders)
