[metadata]
name = tripleo-common
summary = A common library for TripleO workflows.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/tripleo-common/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    tripleo_common

scripts =
    scripts/bootstrap_host_exec
    scripts/create_freeipa_enroll_envfile.py
    scripts/pull-puppet-modules
    scripts/run-validation
    scripts/tripleo-build-images
    scripts/upgrade-non-controller.sh
    scripts/upload-puppet-modules
    scripts/upload-swift-artifacts

data_files =
    lib/heat/undercloud_heat_plugins = undercloud_heat_plugins/*
    share/tripleo-common = sudoers
    share/tripleo-common/container-images = container-images/*
    share/tripleo-common/image-yaml = image-yaml/*
    share/tripleo-common/workbooks = workbooks/*
    share/tripleo-common/healthcheck = healthcheck/*

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = tripleo_common/locale
domain = tripleo-common

[update_catalog]
domain = tripleo-common
output_dir = tripleo_common/locale
input_file = tripleo_common/locale/tripleo-common.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = tripleo_common/locale/tripleo-common.pot

[entry_points]
mistral.actions =
    tripleo.baremetal.configure_boot = tripleo_common.actions.baremetal:ConfigureBootAction
    tripleo.baremetal.configure_root_device = tripleo_common.actions.baremetal:ConfigureRootDeviceAction
    tripleo.baremetal.get_profile = tripleo_common.actions.baremetal:GetProfileAction
    tripleo.baremetal.register_or_update_nodes = tripleo_common.actions.baremetal:RegisterOrUpdateNodes
    tripleo.baremetal.update_node_capability = tripleo_common.actions.baremetal:UpdateNodeCapability
    tripleo.baremetal.cell_v2_discover_hosts = tripleo_common.actions.baremetal:CellV2DiscoverHostsAction
    tripleo.baremetal.validate_nodes = tripleo_common.actions.baremetal:ValidateNodes
    tripleo.baremetal.get_candidate_nodes = tripleo_common.actions.baremetal:GetCandidateNodes
    tripleo.baremetal.probe_node = tripleo_common.actions.baremetal:ProbeNode
    tripleo.deployment.config = tripleo_common.actions.deployment:OrchestrationDeployAction
    tripleo.deployment.deploy = tripleo_common.actions.deployment:DeployStackAction
    tripleo.deployment.overcloudrc = tripleo_common.actions.deployment:OvercloudRcAction
    tripleo.derive_params.convert_number_to_range_list = tripleo_common.actions.derive_params:ConvertNumberToRangeListAction
    tripleo.derive_params.convert_range_to_number_list = tripleo_common.actions.derive_params:ConvertRangeToNumberListAction
    tripleo.derive_params.get_dpdk_nics_numa_info = tripleo_common.actions.derive_params:GetDpdkNicsNumaInfoAction
    tripleo.derive_params.get_dpdk_core_list = tripleo_common.actions.derive_params:GetDpdkCoreListAction
    tripleo.derive_params.get_dpdk_socket_memory = tripleo_common.actions.derive_params:GetDpdkSocketMemoryAction
    tripleo.derive_params.get_host_cpus_list = tripleo_common.actions.derive_params:GetHostCpusListAction
    tripleo.git.clean = tripleo_common.actions.vcs:GitCleanupAction
    tripleo.git.clone = tripleo_common.actions.vcs:GitCloneAction
    tripleo.heat_capabilities.get = tripleo_common.actions.heat_capabilities:GetCapabilitiesAction
    tripleo.heat_capabilities.update = tripleo_common.actions.heat_capabilities:UpdateCapabilitiesAction
    tripleo.package_update.clear_breakpoints = tripleo_common.actions.package_update:ClearBreakpointsAction
    tripleo.package_update.update_stack = tripleo_common.actions.package_update:UpdateStackAction
    tripleo.parameters.get = tripleo_common.actions.parameters:GetParametersAction
    tripleo.parameters.get_flatten = tripleo_common.actions.parameters:GetFlattenedParametersAction
    tripleo.parameters.get_network_config = tripleo_common.actions.parameters:GetNetworkConfigAction
    tripleo.parameters.reset = tripleo_common.actions.parameters:ResetParametersAction
    tripleo.parameters.update = tripleo_common.actions.parameters:UpdateParametersAction
    tripleo.parameters.update_role = tripleo_common.actions.parameters:UpdateRoleParametersAction
    tripleo.parameters.generate_passwords = tripleo_common.actions.parameters:GeneratePasswordsAction
    tripleo.parameters.get_passwords = tripleo_common.actions.parameters:GetPasswordsAction
    tripleo.parameters.get_profile_of_flavor = tripleo_common.actions.parameters:GetProfileOfFlavorAction
    tripleo.parameters.generate_fencing = tripleo_common.actions.parameters:GenerateFencingParametersAction
    tripleo.parameters.rotate_fernet_keys = tripleo_common.actions.parameters:RotateFernetKeysAction
    tripleo.plan.create_container = tripleo_common.actions.plan:CreateContainerAction
    tripleo.plan.delete = tripleo_common.actions.plan:DeletePlanAction
    tripleo.plan.list = tripleo_common.actions.plan:ListPlansAction
    tripleo.plan.export = tripleo_common.actions.plan:ExportPlanAction
    tripleo.logging_to_swift.format_messages = tripleo_common.actions.logging_to_swift:FormatMessagesAction
    tripleo.logging_to_swift.publish_ui_log_to_swift = tripleo_common.actions.logging_to_swift:PublishUILogToSwiftAction
    tripleo.logging_to_swift.prepare_log_download = tripleo_common.actions.logging_to_swift:PrepareLogDownloadAction
    tripleo.role.list = tripleo_common.actions.plan:ListRolesAction
    tripleo.scale.delete_node = tripleo_common.actions.scale:ScaleDownAction
    tripleo.swift.tempurl = tripleo_common.actions.swifthelper:SwiftTempUrlAction
    tripleo.swift.swift_information = tripleo_common.actions.swifthelper:SwiftInformationAction
    tripleo.templates.process = tripleo_common.actions.templates:ProcessTemplatesAction
    tripleo.templates.upload = tripleo_common.actions.templates:UploadTemplatesAction
    tripleo.validations.check_boot_images = tripleo_common.actions.validations:CheckBootImagesAction
    tripleo.validations.check_flavors = tripleo_common.actions.validations:CheckFlavorsAction
    tripleo.validations.check_node_boot_configuration = tripleo_common.actions.validations:CheckNodeBootConfigurationAction
    tripleo.validations.check_nodes_count = tripleo_common.actions.validations:CheckNodesCountAction
    tripleo.validations.get_pubkey = tripleo_common.actions.validations:GetPubkeyAction
    tripleo.validations.get_privkey = tripleo_common.actions.validations:GetPrivkeyAction
    tripleo.validations.enabled = tripleo_common.actions.validations:Enabled
    tripleo.validations.list_groups = tripleo_common.actions.validations:ListGroupsAction
    tripleo.validations.list_validations = tripleo_common.actions.validations:ListValidationsAction
    tripleo.validations.run_validation = tripleo_common.actions.validations:RunValidationAction
    tripleo.validations.verify_profiles = tripleo_common.actions.validations:VerifyProfilesAction
    tripleo.files.file_exists = tripleo_common.actions.files:FileExists
    tripleo.files.make_temp_dir = tripleo_common.actions.files:MakeTempDir
    tripleo.files.remove_temp_dir = tripleo_common.actions.files:RemoveTempDir
    # deprecated for pike release, will be removed in queens
    tripleo.ansible = tripleo_common.actions.ansible:AnsibleAction
    tripleo.ansible-playbook = tripleo_common.actions.ansible:AnsiblePlaybookAction
    tripleo.templates.upload_default = tripleo_common.actions.templates:UploadTemplatesAction
    tripleo.plan.migrate = tripleo_common.actions.plan:MigratePlanAction
