[metadata]
name = tripleo-common
summary = A common library for TripleO workflows.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/tripleo-common/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    tripleo_common

scripts =
    scripts/bootstrap_host_exec
    scripts/bootstrap_host_only_eval
    scripts/bootstrap_host_only_exec
    scripts/pull-puppet-modules
    scripts/run-validation
    scripts/tripleo-build-images
    scripts/tripleo-config-download
    scripts/tripleo-container-image-prepare
    scripts/upload-puppet-modules
    scripts/upload-swift-artifacts

data_files =
    lib/heat/undercloud_heat_plugins = undercloud_heat_plugins/*
    share/tripleo-common = sudoers
    share/tripleo-common/container-images = container-images/*
    share/tripleo-common/image-yaml = image-yaml/*
    share/tripleo-common/workbooks = workbooks/*
    share/tripleo-common/healthcheck = healthcheck/*
    share/ansible/roles/ = roles/*
    share/ansible/plugins/ = ansible_plugins/*

[compile_catalog]
directory = tripleo_common/locale
domain = tripleo-common

[update_catalog]
domain = tripleo-common
output_dir = tripleo_common/locale
input_file = tripleo_common/locale/tripleo-common.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = tripleo_common/locale/tripleo-common.pot

[entry_points]
mistral.actions =
    tripleo.baremetal.configure_boot = tripleo_common.actions.baremetal:ConfigureBootAction
    tripleo.baremetal.configure_root_device = tripleo_common.actions.baremetal:ConfigureRootDeviceAction
    tripleo.baremetal.get_node_hint = tripleo_common.actions.baremetal:GetNodeHintAction
    tripleo.baremetal.get_profile = tripleo_common.actions.baremetal:GetProfileAction
    tripleo.baremetal.update_node_capability = tripleo_common.actions.baremetal:UpdateNodeCapability
    tripleo.baremetal.cell_v2_discover_hosts = tripleo_common.actions.baremetal:CellV2DiscoverHostsAction
    tripleo.baremetal.validate_nodes = tripleo_common.actions.baremetal:ValidateNodes
    tripleo.config.download_config = tripleo_common.actions.config:DownloadConfigAction
    tripleo.config.get_overcloud_config = tripleo_common.actions.config:GetOvercloudConfig
    tripleo.deployment.get_deployment_failures = tripleo_common.actions.deployment:DeploymentFailuresAction
    tripleo.derive_params.convert_number_to_range_list = tripleo_common.actions.derive_params:ConvertNumberToRangeListAction
    tripleo.derive_params.convert_range_to_number_list = tripleo_common.actions.derive_params:ConvertRangeToNumberListAction
    tripleo.derive_params.get_dpdk_nics_numa_info = tripleo_common.actions.derive_params:GetDpdkNicsNumaInfoAction
    tripleo.derive_params.get_dpdk_core_list = tripleo_common.actions.derive_params:GetDpdkCoreListAction
    tripleo.derive_params.get_dpdk_socket_memory = tripleo_common.actions.derive_params:GetDpdkSocketMemoryAction
    tripleo.derive_params.get_host_cpus_list = tripleo_common.actions.derive_params:GetHostCpusListAction
    tripleo.parameters.get_flatten = tripleo_common.actions.parameters:GetFlattenedParametersAction
    tripleo.parameters.get_network_config = tripleo_common.actions.parameters:GetNetworkConfigAction
    tripleo.parameters.reset = tripleo_common.actions.parameters:ResetParametersAction
    tripleo.parameters.update = tripleo_common.actions.parameters:UpdateParametersAction
    tripleo.parameters.update_role = tripleo_common.actions.parameters:UpdateRoleParametersAction
    tripleo.parameters.get_profile_of_flavor = tripleo_common.actions.parameters:GetProfileOfFlavorAction
    tripleo.plan.delete = tripleo_common.actions.plan:DeletePlanAction
    tripleo.plan.list = tripleo_common.actions.plan:ListPlansAction
    tripleo.plan.export = tripleo_common.actions.plan:ExportPlanAction
    tripleo.plan.update_roles = tripleo_common.actions.plan:UpdateRolesAction
    tripleo.plan.validate_roles = tripleo_common.actions.plan:ValidateRolesDataAction
    tripleo.plan.remove_noop_deploystep = tripleo_common.actions.plan:RemoveNoopDeployStepAction
    tripleo.validations.get_pubkey = tripleo_common.actions.validations:GetPubkeyAction
    tripleo.validations.get_privkey = tripleo_common.actions.validations:GetPrivkeyAction
    tripleo.validations.enabled = tripleo_common.actions.validations:Enabled
    tripleo.validations.list_groups = tripleo_common.actions.validations:ListGroupsAction
    tripleo.validations.list_validations = tripleo_common.actions.validations:ListValidationsAction
    tripleo.validations.run_validation = tripleo_common.actions.validations:RunValidationAction
    tripleo.ansible-generate-inventory = tripleo_common.actions.ansible:AnsibleGenerateInventoryAction
    # deprecated for pike release, will be removed in queens
    tripleo.ansible-playbook = tripleo_common.actions.ansible:AnsiblePlaybookAction
    # deprecated for rocky release, will be removed in the "S" cycle
    tripleo.role.list = tripleo_common.actions.plan:ListRolesAction

[tool:pytest]
norecursedirs = .eggs .git .tox dist
log_cli = true

[flake8]
show-source = True
# E123, E125 skipped as they are invalid PEP-8.
# W504/W503 are mutually exclusive and we should avoid them until community
# will pick a winner.
ignore = E123,E125,W503,W504
exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build,releasenotes
builtins = _

[pycodestyle]
exclude = .eggs,.tox
