[metadata]
name = tripleo-common
summary = A common library for TripleO workflows.
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/tripleo-common/latest/
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    tripleo_common

scripts =
    scripts/bootstrap_host_exec
    scripts/bootstrap_host_only_eval
    scripts/bootstrap_host_only_exec
    scripts/pull-puppet-modules
    scripts/tripleo-build-images
    scripts/tripleo-config-download
    scripts/tripleo-mount-image
    scripts/tripleo-unmount-image
    scripts/upload-puppet-modules
    scripts/upload-swift-artifacts
    scripts/upload-artifacts

data_files =
    lib/heat/undercloud_heat_plugins = undercloud_heat_plugins/*
    share/tripleo-common/container-images = container-images/*
    share/tripleo-common/image-yaml = image-yaml/*
    share/tripleo-common/healthcheck = healthcheck/*

[tool:pytest]
norecursedirs = .eggs .git .tox dist
log_cli = true

[flake8]
show-source = True
# E123, E125 skipped as they are invalid PEP-8.
# W504/W503 are mutually exclusive and we should avoid them until community
# will pick a winner.
ignore = E123,E125,W503,W504
exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build,releasenotes
builtins = _

[pycodestyle]
exclude = .eggs,.tox
